--- a/dos33.html
+++ b/dos33.html
@@ -5249,7 +5249,7 @@ With that "legalese" out of the way ... enjoy the read!
  Show me your tables, and I won't usually need your flowcharts; they'll be obvious.</i>"
 -- Fred Brooks
 
-Let the complete clusterfrak of bad design commence in <a class='link' href="https://www.nasa.gov/audience/foreducators/topnav/materials/listbytype/3_2_1_Puff.html">3..2..1..</a>
+Let the complete clusterfrak of bad design commence in <a class='link' href="https://www.nasa.gov/audience/foreducators/topnav/materials/listbytype/3_2_1_Puff.html">3..2..1..PUFF!</a>
 
                     001             PAGE                                            ; This is why I partially dislike old source code:
                     002 ;MISC DOS WORK CELLS                                        ;   <i>(almost) Everything has been abbreviated</i>
