--- a/dos33.html
+++ b/dos33.html
@@ -6063,9 +6063,9 @@ Let the complete clusterfrak of bad design commence in <a class='link' href="htt
 37F9:00 00          414 <a class='d' id='37F9' name='IBSPAR'   >IBSPAR      </a>DS <span class='n'>2</span>,<span class='n'>0</span>          ; IOB SPARES                    ;[11] <a class='mem' name='_37F9' coords='2'>wastes</a> 2 bytes
 37FB:00 01 EF D8    415 <a class='d' id='37FB' name='DCT'      >DCT         </a>DFB <span class='n'>0</span>,<span class='n'>1</span>,$<span class='n'>EF</span>,$<span class='n'>D8</span> ;                               ; <a class='magic' name='_37FB'>magic number</a> More crappy formatting, values defined in <a class='file' href='#RWTSONE'>RWTSONE</a>
                                                                                     ; Put these values on <b>one per line</b> for <i>readability</i> like this:
-                                                                                    ;     DFB 0    ; Device Type, $0 = Disk II
-                                                                                    ;     DFB 1    ; Phases per Track
-                                                                                    ;     DW $D8EF ; Motor on time in 100 microseconds
+                                                                                    ;     DCT_TYPE    DFB 0    ; Device Type, $0 = Disk II
+                                                                                    ;     DCT_PHASES  DFB 1    ; Phases per Track
+                                                                                    ;     DCT_MOTOR   DW $D8EF ; Motor on time in 100 microseconds
 37FF:00             416 <meta                              />            DS <span class='n'>1</span>,<span class='n'>0</span>          ; FILL IN 3700 PAGE             ; <a class='mem' name='_37FF' coords='1'>wastes</a> 1 byte
                     417 <meta                              />            PAGE
                     418 <meta                              />;
